<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:id="@+id/current_song" >    <ImageView        android:id="@+id/albumArt"        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_above="@+id/titleBox"        android:layout_centerVertical="true"        android:layout_margin="21dp"        android:adjustViewBounds="true"        android:contentDescription="@string/thumbnailImage"        android:scaleType="fitCenter"        android:src="@drawable/eighth_notes" />    <ToggleButton        android:id="@+id/play"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_centerInParent="true"        android:layout_marginBottom="21dp"        android:background="@drawable/play_pause"        android:checked="true"        android:contentDescription="@string/play_pause_current_track"        android:gravity="center"        android:textOff=""        android:textOn="" />            <ImageButton        android:id="@+id/fwd"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_alignTop="@+id/play"        android:layout_toRightOf="@+id/play"        android:contentDescription="@string/fast_forward_track"        android:src="@android:drawable/ic_media_ff" />    <ImageButton        android:id="@+id/rew"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginRight="8dp"        android:layout_alignTop="@+id/play"        android:layout_toLeftOf="@+id/play"        android:contentDescription="@string/rewind_track"        android:src="@android:drawable/ic_media_rew" />    <ImageButton        android:id="@+id/prev"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginRight="8dp"        android:layout_alignTop="@+id/rew"        android:layout_toLeftOf="@+id/rew"        android:contentDescription="@string/previous_track"        android:src="@android:drawable/ic_media_previous" />    <ImageButton        android:id="@+id/next"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginLeft="8dp"        android:layout_alignTop="@+id/fwd"        android:layout_toRightOf="@+id/fwd"        android:contentDescription="@string/next_track"        android:src="@android:drawable/ic_media_next" />    <SeekBar        android:id="@+id/seekBar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_above="@+id/play"        android:layout_alignLeft="@+id/prev"        android:layout_alignRight="@+id/next"        android:layout_marginBottom="7dp"        android:max="1000" />    <TextView        android:id="@+id/startTime"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_above="@+id/seekBar"        android:layout_alignLeft="@+id/seekBar"        android:text="@string/zero_time"        android:textAppearance="?android:attr/textAppearanceSmall" />    <TextView        android:id="@+id/endTime"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignBottom="@+id/startTime"        android:layout_alignRight="@+id/seekBar"        android:text="@string/zero_time"        android:textAppearance="?android:attr/textAppearanceSmall" />        <RelativeLayout        android:id="@+id/titleBox"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_above="@+id/startTime"        android:layout_alignLeft="@+id/startTime"        android:layout_alignRight="@+id/endTime"        android:layout_marginBottom="7dp"        android:layout_marginLeft="14dp"        android:layout_marginRight="14dp"        android:background="#999999"        android:padding="7dp" >        <TextView            android:id="@+id/songTitle"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:layout_alignParentTop="true"            android:text="Song title"            android:textAppearance="?android:attr/textAppearanceLarge" />        <TextView            android:id="@+id/artistName"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:layout_below="@+id/songTitle"            android:layout_marginTop="7dp"            android:text="Artist name"            android:textAppearance="?android:attr/textAppearanceSmall" />        <TextView            android:id="@+id/albumName"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_alignParentLeft="true"            android:layout_below="@+id/artistName"            android:layout_marginTop="16dp"            android:text="Album name"            android:textAppearance="?android:attr/textAppearanceMedium"            android:visibility="gone" />    </RelativeLayout>    </RelativeLayout>