<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <ImageView
        android:id="@+id/playlistItemThumbnail"
        android:layout_width="64dip"
        android:layout_height="64dip"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_margin="4dip"
        android:adjustViewBounds="false"
        android:contentDescription="@string/thumbnailImage"
        android:gravity="center_horizontal|center_vertical"
        android:scaleType="centerInside"
        android:src="@drawable/eighth_notes" />

    <TextView
        android:id="@+id/playlistItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/playlistItemThumbnail"
        android:layout_margin="4dip"
        android:layout_toRightOf="@+id/playlistItemThumbnail"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/playlistItemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/playlistItemThumbnail"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="4dip"
        android:layout_toRightOf="@+id/playlistItemThumbnail"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/no_songs_found"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>